--- a/Mensajeria/src/app/componentes/registro/registro.page.html
+++ b/Mensajeria/src/app/componentes/registro/registro.page.html
@@ -26,8 +26,8 @@
     <ion-input [(ngModel)]="confirClave" placeholder=" Repita Contraseña" type="Password" > </ion-input>  
   </ion-item>
    <div linespace></div>
-   <ion-button class="ion-button-class prueba" shape="round" fill="solid" size="large" expand="block" (click)="LoginOTP()">Registrar</ion-button>
-   <ion-label class="ion-text-center"><span class="link-button" (click)="Register()">volver a Login</span></ion-label>
+   <ion-button class="ion-button-class prueba" shape="round" fill="solid" size="large" expand="block" (click)="registro()">Registrar</ion-button>
+   <ion-label class="ion-text-center"><span class="link-button" (click)="btnRuta()">volver a Login</span></ion-label>
  </div>
 
 </ion-content>
