--- a/Mensajeria/src/app/componentes/login/login.page.scss
+++ b/Mensajeria/src/app/componentes/login/login.page.scss
@@ -120,13 +120,26 @@ ion-label{
 	padding: 10px;
 	margin-top: 10px;
 
+	div {
+		float: right;
+		cursor: pointer;
+	}
+	
+
+
 }
+
+.forget-password div:hover{
+	color: red;
+}
+
 
 .link-button{
 	border-bottom: 1px solid;
 	padding-bottom: 5px;
 	position: relative;
 	top: 25px;
+	cursor: pointer;
 }
 
 .link-button:hover{
