--- a/Mensajeria/src/app/componentes/recuperar/recuperar.page.html
+++ b/Mensajeria/src/app/componentes/recuperar/recuperar.page.html
@@ -18,8 +18,8 @@
      <ion-input [(ngModel)]="email" placeholder="Ingrese correo" type="Text" > </ion-input>
    </ion-item>
    <div linespace></div>
-   <ion-button class="ion-button-class prueba" shape="round" fill="solid" size="large" expand="block" (click)="LoginOTP()">RECUPERAR</ion-button>
-   <ion-label class="ion-text-center"><span class="link-button" (click)="Register()">volver a Login</span></ion-label>
+   <ion-button class="ion-button-class prueba" shape="round" fill="solid" size="large" expand="block" (click)="btnRecuperar()">RECUPERAR</ion-button>
+   <ion-label class="ion-text-center"><span class="link-button" (click)="btnRuta()">volver a Login</span></ion-label>
  </div>
 
 </ion-content>
