--- a/Mensajeria/src/app/componentes/inicio/inicio.page.html
+++ b/Mensajeria/src/app/componentes/inicio/inicio.page.html
@@ -1,27 +1,19 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>inicio</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
   <ion-tabs>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="schedule">
+      <ion-tab-button tab="chat">
         <ion-icon name="home"></ion-icon>
         <ion-label>Contacto</ion-label>
       </ion-tab-button>
   
-      <ion-tab-button tab="speakers">
+      <ion-tab-button tab="reciente">
         <ion-icon name="chatbox-ellipses"></ion-icon>
         <ion-label>Conversaciones</ion-label>
       </ion-tab-button>
   
-      <ion-tab-button tab="about">
+      <ion-tab-button tab="perfil">
         <ion-icon name="reader"></ion-icon>
         <ion-label>Perfil</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
 
-</ion-content>
