mejora de vista

--- a/Mensajeria/src/app/componentes/login/login.page.html
+++ b/Mensajeria/src/app/componentes/login/login.page.html
@@ -11,7 +11,7 @@
 			
 		</div>
 		<ion-label style="margin-bottom: 20px;">
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos distinctio deleniti laboriosam.
+			Bienvenido a nuestro servicio de mensajeria<strong> Temri.</strong>
 		</ion-label>
 		<ion-item transparent>
 			<ion-icon name="person-circle"></ion-icon>
