--- a/Mensajeria/src/app/componentes/registro/registro.page.html
+++ b/Mensajeria/src/app/componentes/registro/registro.page.html
@@ -11,7 +11,7 @@
      
    </div>
    <ion-label style="margin-bottom: 20px;">
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos distinctio deleniti laboriosam.
+     ¿No tienes cuenta? Registrate y realiza un inicio rapido.
    </ion-label>
    <ion-item>
      <ion-icon name="person-circle"></ion-icon>
