--- a/Mensajeria/src/app/componentes/recuperar/recuperar.page.html
+++ b/Mensajeria/src/app/componentes/recuperar/recuperar.page.html
@@ -11,7 +11,7 @@
      
    </div>
   <ion-label style="margin-bottom: 20px;">
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos distinctio deleniti laboriosam.
+     ¿Olvidaste tu contraseña? Coloca tu correo para recuperarla.
    </ion-label>
    <ion-item>
      <ion-icon name="person-circle"></ion-icon>
