--- a/Mensajeria/src/app/componentes/login/login.page.html
+++ b/Mensajeria/src/app/componentes/login/login.page.html
@@ -1,4 +1,4 @@
- <ion-header no-border>
+ <ion-header no-border style="background: #fff;">
 	 <div class="login-header ion-padding">
 		 <img class="logo-img" src="assets/icon/fondo.png">
 	 </div>
