--- a/Mensajeria/src/app/componentes/conversaciones/conversaciones.page.html
+++ b/Mensajeria/src/app/componentes/conversaciones/conversaciones.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar class="ion">
     <ion-buttons slot="start">
-      <ion-back-button text="Conv."></ion-back-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title style="text-align: center;">Conversaciones<br><div class="status" size="small">En linea</div></ion-title>
     <ion-avatar slot="end">
