--- a/Mensajeria/src/app/componentes/reciente/reciente.page.scss
+++ b/Mensajeria/src/app/componentes/reciente/reciente.page.scss
@@ -50,3 +50,11 @@ ion-icon{
     width: 98%;
     margin: auto;
   }
+
+
+  .ion{
+    --background: linear-gradient(60grad, #EE7752 30% ,#E73C7E);
+    --background-size: 400% 400%;
+    color: #ffffff;
+    font-weight: bold;
+}
