--- a/Mensajeria/src/app/componentes/reciente/reciente.page.html
+++ b/Mensajeria/src/app/componentes/reciente/reciente.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="ion">
     <ion-title>Conversaciones recientes</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,7 +13,7 @@
     </ion-item>
     -->
   
-    <ion-item detail *ngFor="let list of usuarioLista | search:searchText:'usuario'">
+    <ion-item detail *ngFor="let list of usuarioLista | search:searchText:'usuario'" routerLink="/conversaciones">
       <ion-avatar slot="start">
         <ion-icon name="person-circle"></ion-icon>
       </ion-avatar>
