--- a/Mensajeria/src/app/componentes/perfil/perfil.page.html
+++ b/Mensajeria/src/app/componentes/perfil/perfil.page.html
@@ -5,5 +5,38 @@
 </ion-header>
 
 <ion-content>
+    <ion-card>
+        <ion-card-header>
+            <div style="float: right;">
+                <ion-avatar>
+                  <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+                </ion-avatar>
+            </div>
 
+            <ion-card-title>{{ usuario?.nombre }} {{ usuario?.apellido }}</ion-card-title>
+            <ion-card-subtitle>{{ usuario?.correo }}</ion-card-subtitle>
+        </ion-card-header>
+    </ion-card>
+
+    <ion-list>
+        <ion-item>
+            <ion-icon name="person" slot="start"></ion-icon>
+            <ion-label>Editar cuenta</ion-label>
+        </ion-item>
+
+        <ion-item *ngIf="usuario.id_perfil == 2">
+            <ion-icon name="person" slot="start"></ion-icon>
+            <ion-label>Eliminar cuenta</ion-label>
+        </ion-item>
+
+        <ion-item *ngIf="usuario.id_perfil == 1" (click)="listarUsuario()">
+            <ion-icon name="reader" slot="start"></ion-icon>
+            <ion-label>Listar usuarios registrados</ion-label>
+        </ion-item>
+
+        <ion-item (click)="salir()">
+            <ion-icon name="exit" slot="start"></ion-icon>
+            <ion-label>Cerrar sesión</ion-label>
+        </ion-item>
+    </ion-list>
 </ion-content>
