--- a/Mensajeria/src/app/componentes/perfil/perfil.page.html
+++ b/Mensajeria/src/app/componentes/perfil/perfil.page.html
@@ -19,12 +19,12 @@
     </ion-card>
 
     <ion-list>
-        <ion-item>
+        <ion-item (click)="editar()">
             <ion-icon name="person" slot="start"></ion-icon>
             <ion-label>Editar cuenta</ion-label>
         </ion-item>
 
-        <ion-item *ngIf="usuario.id_perfil == 2">
+        <ion-item *ngIf="usuario.id_perfil == 2" (click)="eliminar()">
             <ion-icon name="person" slot="start"></ion-icon>
             <ion-label>Eliminar cuenta</ion-label>
         </ion-item>
